fix: rename header block to navbar

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,4 +1,4 @@
-.header 
+.navbar 
   background-color: #ffffff
   &-top
     display: flex
@@ -33,6 +33,7 @@
     right: 0
     border: none
     background-color: $primary-color
+    cursor: pointer
 .user
   display: flex
   align-items: center
@@ -47,5 +48,6 @@
     margin-left: 18px
     font-size: 14px
     line-height: 18px
+
     
     
