--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -8,6 +8,22 @@
   &__search
     margin-right: auto
     margin-left: 108px
+  &-bottom
+    background-color: $dark
+  &-menu
+    list-style: none
+    padding: 31px 0
+    margin: 0
+    display: flex
+    justify-content: space-between
+    &__link
+      color: $light
+      text-decoration: none
+      text-transform: uppercase
+      font-size: 14px
+      line-height: 18px
+.logo
+  width: 177px
 .search
   display: flex
   position: relative
