--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,3 +6,5 @@
 @import 'normalize'
 // Подключение стилей для блока header
 @import 'blocks/header'
+// Подключение стилей для адаптива
+@import 'media'
