create: mobile responsive for header

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -17,12 +17,36 @@
   .logo
     width: 132px
   .search
+    filter: none
     &__input
-      width: 340px
+      width: 340px     
 @media (max-width: 768px)
   .container
     max-width: 576px
     width: 92%
+  .navbar
+    &__search, &__user, &-menu
+      display: none
+  .menu
+    &-button
+      padding: 0
+      display: flex
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      width: 16px
+      height: 11px
+      border: none
+      background-color: $light
+      cursor: pointer
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $text-color
+@media (max-width: 576px)
+  .logo
+    width: 99px
+  
   
   
   
