--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,7 @@
 @import 'normalize'
 // Подключение стилей для блока header
 @import 'blocks/header'
+// Хлебные крошки
+@import 'blocks/breadcrumb'
 // Подключение стилей для адаптива
 @import 'media'
