--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'blocks/header'
 // Хлебные крошки
 @import 'blocks/breadcrumb'
+// Подключение стилей для блока hotel
+@import 'blocks/hotel'
 // Подключение стилей для адаптива
 @import 'media'
