create: mobile responsive for hotel

--- a/css/style.css
+++ b/css/style.css
@@ -519,17 +519,25 @@ template {
           justify-content: space-between;
 }
 
+.hotel-info__name {
+  margin-top: 4px;
+  margin-bottom: 0;
+}
+
 .hotel-info__offer {
   margin-left: 14px;
   margin-top: 4px;
+}
+
+.hotel-info__description {
+  margin: 0;
+  margin-top: 5px;
 }
 
 .hotel-name {
   text-transform: uppercase;
   font-size: 24px;
   line-height: 30px;
-  margin-top: 4px;
-  margin-bottom: 0;
 }
 
 .hotel-wrapper {
@@ -544,7 +552,6 @@ template {
 }
 
 .hotel-description {
-  margin: 0;
   font-size: 12px;
   line-height: 15px;
 }
@@ -649,6 +656,35 @@ template {
     width: 16px;
     height: 1px;
     background-color: #333333;
+  }
+  .hotel-info__text {
+    width: 100%;
+  }
+  .hotel-info__name {
+    margin-top: 10px;
+  }
+  .hotel-info__rating {
+    display: none;
+  }
+  .hotel-info__offer {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin-left: 0;
+  }
+  .hotel-wrapper {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .hotel-name {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .stars {
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    width: auto;
   }
 }
 
