--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -43,6 +43,24 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .hotel
+    &-info
+      &__text
+        width: 100%
+      &__name
+        margin-top: 10px
+      &__rating
+        display: none
+      &__offer
+        order: -1
+        margin-left: 0
+    &-wrapper
+      justify-content: space-between
+    &-name
+      flex-basis: 100%
+  .stars
+    flex-basis: auto
+    width: auto
 @media (max-width: 576px)
   .logo
     width: 99px
