--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -4,21 +4,24 @@
     display: flex
     align-items: center
     justify-content: space-between
+    &__name
+      margin-top: 4px
+      margin-bottom: 0
     &__offer
       margin-left: 14px
       margin-top: 4px
+    &__description
+      margin: 0
+      margin-top: 5px
   &-name
     text-transform: uppercase
     font-size: 24px
     line-height: 30px
-    margin-top: 4px
-    margin-bottom: 0
   &-wrapper
     display: flex
     flex-wrap: wrap
     align-items: center
   &-description
-    margin: 0
     font-size: 12px
     line-height: 15px
 .stars
