fix: swiper slider

--- a/css/style.css
+++ b/css/style.css
@@ -630,6 +630,10 @@ template {
   background-color: transparent;
 }
 
+.slider-button:active, .slider-button:focus {
+  outline: none;
+}
+
 .slider-button--next {
   right: 18px;
   background-image: url(../img/arrow-next.svg);
