--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -79,6 +79,8 @@
     background-position: center
     background-size: 10px
     background-color: transparent
+    &:active, &:focus
+      outline: none
     &--next
       right: 18px
       background-image: url(../img/arrow-next.svg)
