--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -25,7 +25,14 @@
   &-description
     font-size: 12px
     line-height: 15px
-  
+  &-grid
+    display: flex
+    justify-content: space-between
+  &-about
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+// Рейтинг
 .stars
   width: 100%
 .offer
@@ -48,6 +55,7 @@
   &__counter
     font-size: 14px
     line-height: 18px
+// Слайдер
 .swiper-container 
   width: 100%
   height: 450px
@@ -87,3 +95,84 @@
     &--prev
       left: 18px
       background-image: url(../img/arrow-prev.svg)
+// Цены
+.booking
+  width: 350px
+  min-height: 210px
+  padding-top: 28px
+  padding-right: 28px
+  padding-bottom: 28px
+  padding-left: 28px
+  background-color: $dark
+  color: $light
+  font-family: 'Nunito', sans-serif
+  border-radius: 8px
+  &__info
+    display: flex
+    justify-content: space-between
+    margin-bottom: 9px
+  &__price
+    display: flex
+    flex-direction: column
+  &__start
+    font-weight: normal
+    font-size: 10px
+    line-height: 14px
+  &__pricetag
+    font-weight: 800
+    font-size: 24px
+    line-height: 33px
+  &__per-room
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
+  &__room
+    margin-top: 4px
+  &__text
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 8px
+    min-width: 80px
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
+  &__description
+    margin-left: 9px
+  &__call-center
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 17px
+  &__heading
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+  &__number
+    display: flex
+    align-items: center
+    justify-content: space-between
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+    color: inherit
+    text-decoration: none
+  &__num
+    margin-left: 8px
+  &__button
+    width: 100%
+    min-height: 45px
+    border: none
+    border-radius: 4px
+    background-color: $primary-color
+    font-family: 'Nunito', sans-serif
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
+    cursor: pointer
+    color: $light
+// Карта
+.map
+  border-radius: 10px
+    
+  
