--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px
+  .swiper
+    &-slide
+      &__image
+        width: 100%
+        height: 100%
+        object-fit: cover
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -20,6 +28,19 @@
     filter: none
     &__input
       width: 340px     
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+    &-about
+      flex-direction: row
+  .slider
+    width: 100%
+  .booking
+    width: 340px
+  .map
+    width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -61,12 +82,28 @@
   .stars
     flex-basis: auto
     width: auto
+  .slider
+    height: 350px
+  .hotel
+    &-about
+      flex-direction: column
+      min-height: 450px
+  .booking
+    width: 100%
+  .map
+    width: 100%
 @media (max-width: 576px)
   .logo
     width: 99px
   .navbar
     &-top
       padding: 28px 0
+  .slider
+    height: 250px
+  .hotel
+    &__slider
+      margin-bottom: 20px
+  
   
   
   
