--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -58,7 +58,7 @@
 // Слайдер
 .swiper-container 
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &:after
@@ -74,6 +74,7 @@
     z-index: 10
 .slider
   max-width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 50%
@@ -173,6 +174,8 @@
     color: $light
 // Карта
 .map
+  width: 347px
   border-radius: 10px
+  overflow: hidden
     
   
