--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -174,8 +174,16 @@
     color: $light
 // Карта
 .map
+  background-image: url(../img/cards.png)
+  background-position: center center
+  background-size: 65%
+  background-repeat: no-repeat
   width: 347px
+  height: 213px
   border-radius: 10px
   overflow: hidden
+  cursor: pointer
+  
+  
     
   
