--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,7 @@
         height: 100%
         object-fit: cover
 @media (max-width: 992px)
-  .container
+  .container, .newsletter-wrapper
     max-width: 700px
   .navbar
     &-top
@@ -41,6 +41,9 @@
     width: 340px
   .map
     width: 340px
+  .newsletter
+    padding-top: 92px
+    padding-bottom: 93px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -92,6 +95,15 @@
     width: 100%
   .map
     width: 100%
+    background-size: 35%
+  .newsletter
+    &-wrapper
+      max-width: 576px
+      width: 92%
+      flex-direction: column
+      align-items: flex-start
+    &__title
+      margin-bottom: 37px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -103,6 +115,24 @@
   .hotel
     &__slider
       margin-bottom: 20px
+  .newsletter
+    padding-top: 76px
+    padding-bottom: 83px
+    &-wrapper
+      max-width: 576px
+      width: 92%
+      flex-direction: column
+      align-items: flex-start
+    &-title
+      font-weight: 300
+      font-size: 20px
+      line-height: 25px
+      &__strong
+        font-size: 30px
+        line-height: 38px
+    .subscribe
+      width: 280px
+      
   
   
   
