--- a/css/style.css
+++ b/css/style.css
@@ -581,6 +581,7 @@ template {
 }
 
 .hotel-slider {
+  margin: 0;
   max-width: 728px;
   height: 450px;
 }
@@ -930,7 +931,7 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 730px;
+  max-width: 730px;
   margin: auto;
   margin-top: 45px;
   background-color: #ffffff;
@@ -1048,14 +1049,18 @@ template {
   z-index: 10;
 }
 
+.swiper-container {
+  height: 100%;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
   }
-  .slider {
+  .hotel-slider {
     width: 590px;
   }
-  .swiper-slide__image {
+  .hotel-slider__image {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
@@ -1105,7 +1110,7 @@ template {
         -ms-flex-direction: row;
             flex-direction: row;
   }
-  .slider {
+  .hotel-slider {
     width: 100%;
   }
   .booking {
@@ -1117,6 +1122,20 @@ template {
   .newsletter {
     padding-top: 92px;
     padding-bottom: 93px;
+  }
+  .reviews {
+    padding-bottom: 60px;
+  }
+  .reviews__title {
+    font-size: 30px;
+    line-height: 38px;
+    margin-bottom: 50px;
+  }
+  .reviews-slider__item {
+    max-width: 579px;
+  }
+  .reviews-slider__text {
+    padding: 0;
   }
 }
 
@@ -1154,6 +1173,13 @@ template {
     height: 1px;
     background-color: #333333;
   }
+  .hotel-about {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-height: 450px;
+  }
   .hotel-info__text {
     width: 100%;
   }
@@ -1169,6 +1195,9 @@ template {
             order: -1;
     margin-left: 0;
   }
+  .hotel-info-slider {
+    height: 350px;
+  }
   .hotel-wrapper {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -1182,16 +1211,6 @@ template {
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
     width: auto;
-  }
-  .slider {
-    height: 350px;
-  }
-  .hotel-about {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    min-height: 450px;
   }
   .booking {
     width: 100%;
@@ -1214,6 +1233,37 @@ template {
   .newsletter__title {
     margin-bottom: 37px;
   }
+  .reviews {
+    padding-bottom: 50px;
+  }
+  .reviews__title {
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 42px;
+  }
+  .reviews-slider__item {
+    padding-right: 30px;
+    padding-bottom: 36px;
+    padding-left: 30px;
+  }
+  .reviews-slider__item:after, .reviews-slider__item:before {
+    display: none;
+  }
+  .reviews-slider__button {
+    top: 32px;
+  }
+  .reviews-slider__button--prev {
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+    margin-left: -65px;
+  }
+  .reviews-slider__button--next {
+    right: 50%;
+    -webkit-transform: translate(50%, 0);
+            transform: translate(50%, 0);
+    margin-right: -65px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1223,11 +1273,11 @@ template {
   .navbar-top {
     padding: 28px 0;
   }
-  .slider {
-    height: 250px;
-  }
   .hotel__slider {
     margin-bottom: 20px;
+  }
+  .hotel-slider {
+    height: 250px;
   }
   .newsletter {
     padding-top: 76px;
