--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,10 +1,9 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px
-  .swiper
-    &-slide
+  .hotel
+    &-slider
+      width: 590px
       &__image
         width: 100%
         height: 100%
@@ -35,8 +34,8 @@
       margin-bottom: 30px
     &-about
       flex-direction: row
-  .slider
-    width: 100%
+    &-slider
+      width: 100%
   .booking
     width: 340px
   .map
@@ -44,6 +43,17 @@
   .newsletter
     padding-top: 92px
     padding-bottom: 93px
+  .reviews
+    padding-bottom: 60px
+    &__title
+      font-size: 30px
+      line-height: 38px
+      margin-bottom: 50px
+    &-slider
+      &__item
+        max-width: 579px
+      &__text
+        padding: 0
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -68,6 +78,9 @@
         height: 1px
         background-color: $text-color
   .hotel
+    &-about
+        flex-direction: column
+        min-height: 450px
     &-info
       &__text
         width: 100%
@@ -78,6 +91,8 @@
       &__offer
         order: -1
         margin-left: 0
+      &-slider
+        height: 350px
     &-wrapper
       justify-content: space-between
     &-name
@@ -85,12 +100,6 @@
   .stars
     flex-basis: auto
     width: auto
-  .slider
-    height: 350px
-  .hotel
-    &-about
-      flex-direction: column
-      min-height: 450px
   .booking
     width: 100%
   .map
@@ -104,17 +113,40 @@
       align-items: flex-start
     &__title
       margin-bottom: 37px
+  .reviews
+    padding-bottom: 50px
+    &__title
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 42px
+    &-slider
+      &__item
+        padding-right: 30px
+        padding-bottom: 36px
+        padding-left: 30px
+        &:after, &:before
+          display: none
+      &__button
+        top: 32px
+        &--prev
+          left: 50%
+          transform: translate(-50%, 0)
+          margin-left: -65px
+        &--next
+          right: 50%
+          transform: translate(50%, 0)
+          margin-right: -65px
 @media (max-width: 576px)
   .logo
     width: 99px
   .navbar
     &-top
       padding: 28px 0
-  .slider
-    height: 250px
   .hotel
     &__slider
       margin-bottom: 20px
+    &-slider
+      height: 250px
   .newsletter
     padding-top: 76px
     padding-bottom: 83px
