--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -34,6 +34,7 @@
     flex-direction: column
     justify-content: space-between
   &-slider
+    margin: 0
     max-width: 728px
     height: 450px
     &__item
