--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -15,7 +15,7 @@
       display: flex
       flex-direction: column
       align-items: center
-      width: 730px
+      max-width: 730px
       margin: auto
       margin-top: 45px
       background-color: #ffffff
@@ -96,3 +96,6 @@
       padding-left: 35px
       padding-right: 35px
       z-index: 10
+.swiper
+  &-container
+    height: 100%
