--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,5 +1,5 @@
 .hotel
-  padding-top: 23px
+  padding-top: 22px
   padding-bottom: 70px
   &-info
     display: flex
@@ -7,14 +7,14 @@
     justify-content: space-between
     padding-bottom: 20px
     &__name
-      margin-top: 4px
+      margin-top: 0
       margin-bottom: 0
     &__offer
       margin-left: 14px
       margin-top: 4px
     &__description
       margin: 0
-      margin-top: 5px
+      margin-top: 0
   &-name
     text-transform: uppercase
     font-size: 24px
@@ -29,6 +29,7 @@
   &-grid
     display: flex
     justify-content: space-between
+    height: 450px
   &-about
     display: flex
     flex-direction: column
@@ -78,6 +79,7 @@
 // Рейтинг
 .stars
   width: 100%
+  font-size: 10px
 .offer
   padding: 4px 9px
   background-color: $primary-color
@@ -178,16 +180,19 @@
     color: $light
 // Карта
 .map
-  background-image: url(../img/cards.png)
+  background-image: url(../img/cards-2.jpeg)
   background-position: center center
-  background-size: 65%
+  background-size: 100%
   background-repeat: no-repeat
   width: 347px
   height: 213px
   border-radius: 10px
   overflow: hidden
   cursor: pointer
-  
+
+
+
+
   
     
   
