--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,13 +11,16 @@
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
+  .user
+    &__name
+      margin-top: 5px
   .navbar
     &-top
       padding: 30px 0
     &__search
-      margin-left: auto
+      margin-left: 47px
     &-menu
-      padding: 22px 0
+      padding: 22px 14px
       &__link
         font-size: 12px
         line-height: 15px
@@ -28,7 +31,9 @@
     &__input
       width: 340px     
   .hotel
+    padding-bottom: 60px
     &-grid
+      height: 100%
       flex-direction: column
     &__slider
       margin-bottom: 30px
@@ -36,10 +41,15 @@
       flex-direction: row
     &-slider
       width: 100%
+      height: 450px
   .booking
     width: 340px
+    max-height: 210px
+    padding-right: 23px
+    padding-left: 23px
   .map
     width: 340px
+    max-height: 210px
   .newsletter
     padding-top: 92px
     padding-bottom: 93px
@@ -52,9 +62,18 @@
     &-slider
       &__item
         max-width: 579px
+        min-height: 299px
+        &:after, &:before
+          display: none
       &__text
         padding: 0
-@media (max-width: 768px)
+      &__button
+        top: 50%
+        &--prev
+          left: 0
+        &--next
+          right: 0
+@media (max-width: 767px)
   .container
     max-width: 576px
     width: 92%
@@ -78,6 +97,7 @@
         height: 1px
         background-color: $text-color
   .hotel
+    padding-bottom: 40px
     &-about
         flex-direction: column
         min-height: 450px
@@ -97,14 +117,19 @@
       justify-content: space-between
     &-name
       flex-basis: 100%
+  .navbar
+    &-top
+      &__menu
+        &-button
+          margin-bottom: -5px
   .stars
+    margin-top: -4px
     flex-basis: auto
     width: auto
   .booking
     width: 100%
   .map
     width: 100%
-    background-size: 35%
   .newsletter
     &-wrapper
       max-width: 576px
@@ -112,7 +137,7 @@
       flex-direction: column
       align-items: flex-start
     &__title
-      margin-bottom: 37px
+      margin-bottom: 40px
   .reviews
     padding-bottom: 50px
     &__title
@@ -124,29 +149,35 @@
         padding-right: 30px
         padding-bottom: 36px
         padding-left: 30px
-        &:after, &:before
-          display: none
       &__button
         top: 32px
         &--prev
           left: 50%
           transform: translate(-50%, 0)
-          margin-left: -65px
+          margin-left: -90px
         &--next
           right: 50%
           transform: translate(50%, 0)
-          margin-right: -65px
+          margin-right: -90px
 @media (max-width: 576px)
   .logo
     width: 99px
   .navbar
     &-top
       padding: 28px 0
+  .breadcrumb
+    &-list
+      padding-bottom: 18px
+  .stars
+    padding-right: 30px
+    padding-top: 10px
   .hotel
+    padding-top: 0
     &__slider
       margin-bottom: 20px
-    &-slider
       height: 250px
+    &-description
+      max-width: 280px
   .newsletter
     padding-top: 76px
     padding-bottom: 83px
@@ -162,9 +193,49 @@
       &__strong
         font-size: 30px
         line-height: 38px
-    .subscribe
-      width: 280px
+  .subscribe
+    width: 280px
+    &__input
+      padding-left: 20px
+@media (max-width: 320px)
+  .container
+    max-width: 280px
+  .breadcrumb
+    &-list
+      padding-top: 19px
+      padding-bottom: 19px
+  .stars
+    padding-right: 17px
+    padding-top: 10px
+  .hotel
+    &-slider
+      max-width: 279px
+      max-height: 179px
+    &-info
+      padding-bottom: 38px
+    &-about
+      display: flex
+      min-height: 405px
+      max-height: 405px
+  .booking
+    max-width: 279px
+    padding-right: 21px
+    padding-left: 21px
+  .map
+    max-width: 279px
+    min-height: 173px
+    max-height: 173px
+  .newsletter
+    padding-left: 6px
+  .reviews
+    &__title
+      margin: auto
+      margin-bottom: 42px
+      max-width: 245px
+    
       
+  
+
   
   
   
