--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -16,6 +16,7 @@
       flex-direction: column
       align-items: center
       max-width: 730px
+      min-height: 280px
       margin: auto
       margin-top: 45px
       background-color: #ffffff
@@ -43,7 +44,7 @@
         top: 119px
     &__button
       position: absolute
-      top: 50%
+      top: 46%
       transform: translateY(-50%)
       width: 30px
       height: 30px
@@ -56,10 +57,10 @@
       z-index: 20
       &--prev
         background-image: url(../img/arrow-prev-secondary.svg)
-        left: 0
+        left: 15px
       &--next
         background-image: url(../img/arrow-next-secondary.svg)
-        right: 0
+        right: 15px
     &__profile
       display: flex
       flex-direction: column
@@ -87,7 +88,10 @@
     &__raiting
       display: flex
       align-items: center
+      justify-content: space-between
+      min-width: 48px
     &__text
+      width: 100%
       font-weight: normal
       font-size: 12px
       line-height: 160%
@@ -96,6 +100,3 @@
       padding-left: 35px
       padding-right: 35px
       z-index: 10
-.swiper
-  &-container
-    height: 100%
