--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,6 +8,9 @@
         width: 100%
         height: 100%
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
@@ -73,6 +76,16 @@
           left: 0
         &--next
           right: 0
+  .activities
+    padding-bottom: 70px
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 339px
+    height: 255px
+    padding-right: 16%
 @media (max-width: 767px)
   .container
     max-width: 576px
@@ -159,6 +172,11 @@
           right: 50%
           transform: translate(50%, 0)
           margin-right: -90px
+  .activities
+    padding-bottom: 70px
+  .card
+    width: 48%
+    height: 250px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -173,6 +191,7 @@
     padding-top: 10px
   .hotel
     padding-top: 0
+    padding-bottom: 39px
     &__slider
       margin-bottom: 20px
       height: 250px
@@ -191,12 +210,33 @@
       font-size: 20px
       line-height: 25px
       &__strong
+        margin-top: 5px
         font-size: 30px
         line-height: 38px
+        margin-bottom: -5px
   .subscribe
     width: 280px
     &__input
       padding-left: 20px
+  .activities
+    padding-top: 37px
+    padding-bottom: 60px
+    &__title
+      font-size: 18px
+      margin-bottom: 33px
+  .card
+    padding-right: 30%
+    &:nth-child(even)
+      order: 10
+    &:not(:first-child):nth-child(odd)
+      margin-bottom: 28px
+    &:last-child
+      padding-right: 15%
+      margin-bottom: 0
+  .card
+    width: 100%
+    height: 255px
+
 @media (max-width: 320px)
   .container
     max-width: 280px
@@ -226,7 +266,8 @@
     min-height: 173px
     max-height: 173px
   .newsletter
-    padding-left: 6px
+    padding-left: 7px
+    
   .reviews
     &__title
       margin: auto
