--- a/css/style.css
+++ b/css/style.css
@@ -812,6 +812,235 @@ template {
   cursor: pointer;
 }
 
+.packages {
+  padding-top: 41px;
+  padding-bottom: 70px;
+}
+
+.packages__title {
+  margin: 0;
+  margin-bottom: 65px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.packages-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: 500px 500px;
+      grid-template-rows: 500px 500px;
+  gap: 30px;
+}
+
+.package {
+  border-radius: 8px;
+  background-color: #0A223D;
+  color: #ffffff;
+  overflow: hidden;
+}
+
+.package-first__images {
+  position: relative;
+  height: 500px;
+  width: 100%;
+}
+
+.package-first__image {
+  width: 100%;
+  height: 100%;
+}
+
+.package-first__offer {
+  position: absolute;
+  top: 26px;
+  left: 0;
+  padding-top: 8px;
+  padding-right: 20px;
+  padding-bottom: 7px;
+  padding-left: 11px;
+  background-color: #EC1F46;
+  border-radius: 0px 4px 4px 0px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.package-first__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 46px;
+  padding-left: 45px;
+  padding-bottom: 30px;
+  padding-right: 21px;
+}
+
+.package:first-child {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+}
+
+.package__images {
+  position: relative;
+  height: 250px;
+}
+
+.package__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.package__offer {
+  position: absolute;
+  top: 26px;
+  left: 0;
+  padding-top: 3px;
+  padding-right: 9px;
+  padding-bottom: 2px;
+  padding-left: 9px;
+  background-color: #EC1F46;
+  border-radius: 0px 4px 4px 0px;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 13px;
+}
+
+.package__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 30px;
+  padding-left: 32px;
+  padding-bottom: 30px;
+  padding-right: 21px;
+}
+
+.package__raiting {
+  font-size: 8px;
+  max-width: 100%;
+  max-height: 8px;
+}
+
+.package__name {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23px;
+  margin-bottom: 22px;
+}
+
+.package__about {
+  margin-top: -10px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160.6%;
+  margin-bottom: 44px;
+}
+
+.package__rooms {
+  min-height: 67px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 28px;
+}
+
+.package__text {
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.package__description {
+  margin-left: 14px;
+}
+
+.package__prices {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.package__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.package__button {
+  min-width: 120px;
+  padding-top: 10px;
+  padding-bottom: 11px;
+  padding-left: 26px;
+  padding-right: 27px;
+  border: none;
+  border-radius: 4px;
+  background-color: #EC1F46;
+  color: #ffffff;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  cursor: pointer;
+}
+
+.price-to {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
+  margin-bottom: 5px;
+}
+
+.price-after {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  margin-bottom: 5px;
+}
+
 .newsletter {
   position: relative;
   padding-top: 98px;
@@ -1202,6 +1431,9 @@ template {
   .hotel {
     padding-bottom: 60px;
   }
+  .hotel-info__name {
+    margin-top: 2px;
+  }
   .hotel-grid {
     height: 100%;
     -webkit-box-orient: vertical;
@@ -1231,6 +1463,19 @@ template {
   .map {
     width: 340px;
     max-height: 210px;
+  }
+  .packages {
+    padding-bottom: 60px;
+  }
+  .packages__title {
+    margin-bottom: 55px;
+  }
+  .packages-wrapper {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (500px)[3];
+        grid-template-rows: repeat(3, 500px);
+    gap: 15px;
   }
   .newsletter {
     padding-top: 92px;
@@ -1365,6 +1610,54 @@ template {
   }
   .map {
     width: 100%;
+  }
+  .packages__title {
+    font-size: 30px;
+    margin-bottom: 45px;
+  }
+  .packages-wrapper {
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+    -ms-grid-rows: 1fr (480px)[4];
+        grid-template-rows: 1fr repeat(4, 480px);
+  }
+  .package {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+  }
+  .package:first-child {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+  }
+  .package__images {
+    height: 240px;
+  }
+  .package-first__images {
+    height: 300px;
+    width: 100%;
+  }
+  .package-first__image {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .package-first__info {
+    padding-top: 22px;
+    padding-right: 21px;
+    padding-bottom: 25px;
+    padding-left: 21px;
+  }
+  .package__info {
+    padding-top: 22px;
+    padding-right: 21px;
+    padding-bottom: 25px;
+    padding-left: 21px;
   }
   .newsletter-wrapper {
     max-width: 576px;
