--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -62,8 +62,10 @@
     &__title
       margin-bottom: 55px
     &-wrapper
-      grid-template-columns: repeat(2, 1fr)
-      grid-template-rows: repeat(3, 500px)
+      // grid-template-columns: repeat(2, 1fr)
+      // grid-template-rows: repeat(3, 500px)
+      grid-template-columns: 1fr 1fr
+      grid-template-rows: 500px 500px 500px
       gap: 15px
   
   .newsletter
@@ -164,7 +166,8 @@
       margin-bottom: 45px
     &-wrapper  
       grid-template-columns: 100%
-      grid-template-rows: 1fr repeat(4, 480px)
+      // grid-template-rows: 1fr repeat(4, 480px)
+      grid-template-rows: 1fr 480px 480px 480px 480px
   .package
     display: grid
     grid-column: 1 / 2
