--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -11,7 +11,8 @@
     text-transform: uppercase
   &-wrapper
     display: grid
-    grid-template-columns: repeat(3, 1fr)
+    // grid-template-columns: repeat(3, 1fr)
+    grid-template-columns: 1fr 1fr 1fr
     grid-template-rows: 500px 500px
     gap: 30px
 .package
