--- a/css/style.css
+++ b/css/style.css
@@ -848,49 +848,6 @@ template {
   overflow: hidden;
 }
 
-.package-first__images {
-  position: relative;
-  height: 500px;
-  width: 100%;
-}
-
-.package-first__image {
-  width: 100%;
-  height: 100%;
-}
-
-.package-first__offer {
-  position: absolute;
-  top: 26px;
-  left: 0;
-  padding-top: 8px;
-  padding-right: 20px;
-  padding-bottom: 7px;
-  padding-left: 11px;
-  background-color: #EC1F46;
-  border-radius: 0px 4px 4px 0px;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 15px;
-}
-
-.package-first__info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding-top: 46px;
-  padding-left: 45px;
-  padding-bottom: 30px;
-  padding-right: 21px;
-}
-
 .package:first-child {
   display: -ms-grid;
   display: grid;
@@ -906,11 +863,22 @@ template {
   height: 250px;
 }
 
+.package__images-first {
+  position: relative;
+  height: 500px;
+  width: 100%;
+}
+
 .package__image {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.package__image-first {
+  width: 100%;
+  height: 100%;
 }
 
 .package__offer {
@@ -928,6 +896,21 @@ template {
   line-height: 13px;
 }
 
+.package__offer-first {
+  position: absolute;
+  top: 26px;
+  left: 0;
+  padding-top: 8px;
+  padding-right: 20px;
+  padding-bottom: 7px;
+  padding-left: 11px;
+  background-color: #EC1F46;
+  border-radius: 0px 4px 4px 0px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+}
+
 .package__info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -941,6 +924,23 @@ template {
           justify-content: space-between;
   padding-top: 30px;
   padding-left: 32px;
+  padding-bottom: 30px;
+  padding-right: 21px;
+}
+
+.package__info-first {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 46px;
+  padding-left: 45px;
   padding-bottom: 30px;
   padding-right: 21px;
 }
@@ -1577,6 +1577,19 @@ template {
   margin-bottom: 23px;
 }
 
+.footer__btr-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
 .footer__button {
   min-width: 160px;
   min-height: 50px;
@@ -1588,6 +1601,7 @@ template {
   border-radius: 4px;
   border: none;
   background-color: #EC1F46;
+  cursor: pointer;
 }
 
 .footer__info {
@@ -1877,13 +1891,12 @@ template {
   body {
     padding-top: 78px;
   }
-  .navbar__mobile_fixed {
+  .navbar_mobile_fixed {
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
     z-index: 99;
-    overflow: scroll;
   }
   .navbar__user_mobile_hidden {
     display: none;
@@ -1916,10 +1929,14 @@ template {
     left: 0;
     right: 0;
     bottom: 0;
-    top: 78px;
+    top: 74px;
     padding-top: 31px;
+    overflow-y: scroll;
+    -ms-scroll-snap-type: y;
+        scroll-snap-type: y;
   }
   .navbar-bottom--visible {
+    scroll-snap-align: start;
     display: block;
   }
   .navbar-menu {
@@ -2052,21 +2069,15 @@ template {
   .package__images {
     height: 240px;
   }
-  .package-first__images {
+  .package__images-first {
     height: 300px;
     width: 100%;
   }
-  .package-first__image {
+  .package__image-first {
     -o-object-fit: cover;
        object-fit: cover;
   }
-  .package-first__info {
-    padding-top: 22px;
-    padding-right: 21px;
-    padding-bottom: 25px;
-    padding-left: 21px;
-  }
-  .package__info {
+  .package__info, .package__info-first {
     padding-top: 22px;
     padding-right: 21px;
     padding-bottom: 25px;
@@ -2306,6 +2317,9 @@ template {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
