--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -113,6 +113,11 @@
     padding-right: 23px
     resize: none
     margin-bottom: 23px
+  &__btr-info
+      display: flex
+      align-items: center
+      justify-content: space-between
+      width: 100%
   &__button
     min-width: 160px
     min-height: 50px
@@ -124,6 +129,7 @@
     border-radius: 4px
     border: none
     background-color: $primary-color
+    cursor: pointer
   &__info
     font-weight: 700
     font-size: 12px
