--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -442,7 +442,7 @@
       &-wrapper
         max-width: 30px
         min-width: 30px
-    &__btr-info
+    &__btn-info
       display: flex
       align-items: start
       flex-direction: column-reverse
