--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -113,7 +113,7 @@
     padding-right: 23px
     resize: none
     margin-bottom: 23px
-  &__btr-info
+  &__btn-info
       display: flex
       align-items: center
       justify-content: space-between
