--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -25,6 +25,7 @@
       font-size: 14px
       line-height: 18px
       font-weight: 600
+      cursor: pointer
     &__item
       &_mobile
         &_visible
@@ -61,6 +62,7 @@
   align-items: center
   text-decoration: none
   color: $text-color
+  cursor: pointer
   &__avatar
     width: 40px
     height: 40px
