--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -163,6 +163,7 @@
     line-height: 25px
     color: inherit
     text-decoration: none
+    cursor: pointer
   &__num
     margin-left: 8px
   &__button
