--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,56 @@ img {
   max-width: 100%;
 }
 
+.input {
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: none;
+  height: 50px;
+  padding-left: 23px;
+  padding-right: 23px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.message {
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: none;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  padding-left: 23px;
+  padding-right: 23px;
+  resize: none;
+}
+
+.button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  border-radius: 4px;
+  border: none;
+  background-color: #EC1F46;
+  cursor: pointer;
+}
+
+.button__return {
+  max-width: 200px;
+  display: inline-block;
+  text-decoration: none;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -410,6 +460,7 @@ template {
   font-size: 14px;
   line-height: 18px;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .navbar-menu__item_mobile_visible {
@@ -462,6 +513,7 @@ template {
           align-items: center;
   text-decoration: none;
   color: #333333;
+  cursor: pointer;
 }
 
 .user__avatar {
@@ -503,6 +555,7 @@ template {
 .breadcrumb-list__link {
   text-decoration: none;
   color: inherit;
+  cursor: pointer;
 }
 
 .hotel {
@@ -784,6 +837,7 @@ template {
   line-height: 25px;
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .booking__num {
@@ -1545,18 +1599,9 @@ template {
 }
 
 .footer__input {
-  background-color: #ffffff;
-  border-radius: 4px;
-  border: none;
-  height: 50px;
-  padding-left: 23px;
-  padding-right: 23px;
   margin-bottom: 15px;
   -ms-flex-preferred-size: 47%;
       flex-basis: 47%;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
 }
 
 .footer__message {
@@ -1564,16 +1609,6 @@ template {
   border-radius: 4px;
   border: none;
   height: 123px;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  padding-left: 23px;
-  padding-right: 23px;
-  resize: none;
   margin-bottom: 23px;
 }
 
@@ -1588,20 +1623,6 @@ template {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
-}
-
-.footer__button {
-  min-width: 160px;
-  min-height: 50px;
-  padding: 18px;
-  color: #ffffff;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-  border-radius: 4px;
-  border: none;
-  background-color: #EC1F46;
-  cursor: pointer;
 }
 
 .footer__info {
@@ -1655,6 +1676,102 @@ template {
   line-height: 15px;
   text-decoration: none;
   color: #ffffff;
+  cursor: pointer;
+}
+
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__dialog {
+  max-width: 478px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding-top: 33px;
+  padding-bottom: 33px;
+  padding-right: 88px;
+  padding-left: 88px;
+  background-color: #0A223D;
+  color: #ffffff;
+  border-radius: 8px;
+  z-index: 101;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__close {
+  position: absolute;
+  right: 18px;
+  top: 17px;
+  text-decoration: none;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.modal__title {
+  margin: 0;
+  margin-bottom: 16px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.modal__message {
+  width: 100%;
+  min-height: 123px;
+  margin-bottom: 15px;
+}
+
+.modal__info {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #E0E0E0;
+}
+
+.modal__btn-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
 }
 
 @media (max-width: 1200px) {
@@ -1880,6 +1997,15 @@ template {
   }
   .footer__rules {
     margin-left: 0;
+  }
+  .modal__dialog {
+    height: 100%;
+    overflow-y: scroll;
+    max-width: 400px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 40px;
+    padding-left: 40px;
   }
 }
 
@@ -2145,6 +2271,32 @@ template {
   .footer__social-network {
     margin-left: 10px;
   }
+  .modal__dialog {
+    max-width: 400px;
+    min-width: 400px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .modal__message {
+    margin-bottom: 0;
+  }
+  .modal__btn-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    padding-bottom: 15px;
+  }
+  .modal__info {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -2343,6 +2495,10 @@ template {
   }
   .footer__rules {
     margin-bottom: 10px;
+  }
+  .modal__dialog {
+    max-width: 390px;
+    min-width: 300px;
   }
 }
 
