--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,3 +9,44 @@ body
   margin: auto
 img
   max-width: 100%
+.input
+  background-color: #ffffff
+  border-radius: 4px
+  border: none
+  height: 50px
+  padding-left: 23px
+  padding-right: 23px
+  font-weight: 400
+  font-size: 12px
+  line-height: 15px
+.message
+  background-color: #ffffff
+  border-radius: 4px
+  border: none
+  flex-basis: 100%
+  font-weight: 400
+  font-size: 12px
+  line-height: 15px
+  padding-top: 18px
+  padding-bottom: 18px
+  padding-left: 23px
+  padding-right: 23px
+  resize: none
+.button
+  min-width: 160px
+  min-height: 50px
+  padding: 18px
+  color: $light
+  font-weight: 700
+  font-size: 12px
+  line-height: 15px
+  border-radius: 4px
+  border: none
+  background-color: $primary-color
+  cursor: pointer
+  &__return
+    max-width: 200px
+    display: inline-block
+    text-decoration: none
+    margin-bottom: 20px
+    text-align: center
