--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,5 +20,7 @@
 @import 'blocks/activities'
 // Подключение стилей для подвала
 @import 'blocks/footer'
+// Подключение стилей для модального окна
+@import 'blocks/modal'
 // Подключение стилей для адаптива
 @import 'media'
