create: add validation for form

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,7 +15,8 @@
     &__legal
       margin-left: 20px
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
@@ -145,7 +146,8 @@
         grid-row: 4
         margin-bottom: 15px
     &__input
-      flex-basis: 47%
+      &-group
+        flex-basis: 47%
     &__informations
       grid-column: span 6
       max-height: 22px
@@ -334,7 +336,8 @@
     &__additional
       margin-left: -10px
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
     &__social
       &-network
         margin-left: 10px
