--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -50,3 +50,7 @@ img
     text-decoration: none
     margin-bottom: 20px
     text-align: center
+.invalid
+  color: $primary-color
+  border-bottom: 1px solid $primary-color
+  position: block
