--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -50,17 +50,18 @@
     text-align: center
   &__input
     width: 100%
-    margin-bottom: 15px
+    margin-top: 15px
   &__message
     width: 100%
     min-height: 123px
-    margin-bottom: 15px
+    margin-top: 15px
   &__info
     font-weight: 700
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
   &__btn-info
+    margin-top: 15px
     display: flex
     align-items: center
     justify-content: space-between
