--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,12 @@ img {
   text-align: center;
 }
 
+.invalid {
+  color: #EC1F46;
+  border-bottom: 1px solid #EC1F46;
+  position: block;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -1156,6 +1162,7 @@ template {
 }
 
 .subscribe {
+  display: block;
   position: relative;
   width: 350px;
   min-height: 55px;
@@ -1164,24 +1171,27 @@ template {
 }
 
 .subscribe__input {
-  position: absolute;
-  height: 100%;
-  width: 100%;
+  position: relative;
+  width: 350px;
+  min-height: 55px;
   padding-left: 33px;
   padding-right: 80px;
   border: none;
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .subscribe__button {
+  display: block;
   max-width: 65px;
   min-width: 65px;
   position: absolute;
   right: 0;
   top: 0;
-  height: 100%;
+  min-height: 55px;
   border: none;
   background-color: #EC1F46;
   color: #ffffff;
@@ -1189,6 +1199,8 @@ template {
   font-size: 12px;
   line-height: 15px;
   cursor: pointer;
+  border-radius: 0 4px 4px 0;
+  overflow: hidden;
 }
 
 .reviews {
@@ -1599,6 +1611,10 @@ template {
 }
 
 .footer__input {
+  width: 100%;
+}
+
+.footer__input-group {
   margin-bottom: 15px;
   -ms-flex-preferred-size: 47%;
       flex-basis: 47%;
@@ -1745,13 +1761,13 @@ template {
 
 .modal__input {
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .modal__message {
   width: 100%;
   min-height: 123px;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .modal__info {
@@ -1762,6 +1778,7 @@ template {
 }
 
 .modal__btn-info {
+  margin-top: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1794,7 +1811,7 @@ template {
   .footer__legal {
     margin-left: 20px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -1987,7 +2004,7 @@ template {
     grid-row: 4;
     margin-bottom: 15px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 47%;
         flex-basis: 47%;
   }
@@ -2262,7 +2279,7 @@ template {
   .footer__additional {
     margin-left: -10px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
