--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -87,8 +87,10 @@
     &-wrapper
       min-width: 40px
   &__input
-    margin-bottom: 15px
-    flex-basis: 47%
+    width: 100%
+    &-group
+      margin-bottom: 15px
+      flex-basis: 47%
   &__message
     background-color: #ffffff
     border-radius: 4px
