--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -34,28 +34,32 @@
       line-height: 45px
       text-transform: uppercase
 .subscribe
+  display: block
   position: relative
   width: 350px
   min-height: 55px
   border-radius: 4px
   overflow: hidden
   &__input
-    position: absolute
-    height: 100%
-    width: 100%
+    position: relative
+    width: 350px
+    min-height: 55px
     padding-left: 33px
     padding-right: 80px
     border: none
     font-weight: 300
     font-size: 14px
     line-height: 18px
+    border-radius: 4px
+    overflow: hidden
   &__button
+    display: block
     max-width: 65px
     min-width: 65px
     position: absolute
     right: 0
     top: 0
-    height: 100%
+    min-height: 55px
     border: none
     background-color: $primary-color
     color: $light
@@ -63,3 +67,5 @@
     font-size: 12px
     line-height: 15px
     cursor: pointer
+    border-radius: 0 4px 4px 0
+    overflow: hidden
