--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -80,6 +80,8 @@
   &__link
     text-decoration: none
     color: inherit
+    &:hover
+      text-decoration: underline
   &__icon
     margin-left: 8px
     max-width: 18px
@@ -130,5 +132,10 @@
     text-decoration: none
     color: $light
     cursor: pointer
+    &:hover
+      text-decoration: underline
+  &__button
+    &:hover
+      box-shadow: 0 0 5px
 
 
