--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -26,6 +26,8 @@
       line-height: 18px
       font-weight: 600
       cursor: pointer
+      &:hover
+        text-decoration: underline
     &__item
       &_mobile
         &_visible
@@ -57,12 +59,16 @@
     border: none
     background-color: $primary-color
     cursor: pointer
+    &:hover
+      box-shadow: 0 0 5px
 .user
   display: flex
   align-items: center
   text-decoration: none
   color: $text-color
   cursor: pointer
+  &:hover
+    text-decoration: underline
   &__avatar
     width: 40px
     height: 40px
@@ -72,6 +78,7 @@
     margin-left: 18px
     font-size: 14px
     line-height: 18px
+    
 
 
     
