--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -166,6 +166,8 @@
     cursor: pointer
   &__num
     margin-left: 8px
+    &:hover
+      text-decoration: underline
   &__button
     width: 100%
     min-height: 45px
@@ -178,6 +180,8 @@
     line-height: 19px
     cursor: pointer
     color: $light
+    &:hover
+      box-shadow: 0 0 5px
 // Карта
 .map
   background-image: url(../img/cards-2.jpeg)
