--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -30,6 +30,7 @@
     visibility: hidden
     opacity: 0
     transition: opacity 0.3s
+    overflow-y: auto
     &--visible
       visibility: visible
       opacity: 1
@@ -49,6 +50,7 @@
     text-transform: uppercase
     text-align: center
   &__input
+    position: relative
     width: 100%
     margin-top: 15px
   &__message
