--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,11 @@ img {
 }
 
 .invalid {
+  font-size: 12px;
   color: #EC1F46;
   border-bottom: 1px solid #EC1F46;
-  position: block;
+  position: absolute;
+  left: 0;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -469,6 +471,10 @@ template {
   cursor: pointer;
 }
 
+.navbar-menu__link:hover {
+  text-decoration: underline;
+}
+
 .navbar-menu__item_mobile_visible {
   display: none;
 }
@@ -510,6 +516,11 @@ template {
   cursor: pointer;
 }
 
+.search__button:hover {
+  -webkit-box-shadow: 0 0 5px;
+          box-shadow: 0 0 5px;
+}
+
 .user {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -520,6 +531,10 @@ template {
   text-decoration: none;
   color: #333333;
   cursor: pointer;
+}
+
+.user:hover {
+  text-decoration: underline;
 }
 
 .user__avatar {
@@ -562,6 +577,10 @@ template {
   text-decoration: none;
   color: inherit;
   cursor: pointer;
+}
+
+.breadcrumb-list__link:hover {
+  text-decoration: underline;
 }
 
 .hotel {
@@ -850,6 +869,10 @@ template {
   margin-left: 8px;
 }
 
+.booking__num:hover {
+  text-decoration: underline;
+}
+
 .booking__button {
   width: 100%;
   min-height: 45px;
@@ -862,6 +885,11 @@ template {
   line-height: 19px;
   cursor: pointer;
   color: #ffffff;
+}
+
+.booking__button:hover {
+  -webkit-box-shadow: 0 0 5px;
+          box-shadow: 0 0 5px;
 }
 
 .map {
@@ -1089,6 +1117,11 @@ template {
   cursor: pointer;
 }
 
+.package__button:hover {
+  -webkit-box-shadow: 0 0 5px;
+          box-shadow: 0 0 5px;
+}
+
 .price-to {
   font-weight: 400;
   font-size: 14px;
@@ -1201,6 +1234,10 @@ template {
   cursor: pointer;
   border-radius: 0 4px 4px 0;
   overflow: hidden;
+}
+
+.subscribe__button:hover {
+  text-decoration: underline;
 }
 
 .reviews {
@@ -1449,6 +1486,11 @@ template {
   cursor: pointer;
 }
 
+.card__button:hover {
+  -webkit-box-shadow: 0 0 5px;
+          box-shadow: 0 0 5px;
+}
+
 .footer {
   background-color: #0A223D;
   color: #ffffff;
@@ -1600,6 +1642,10 @@ template {
   color: inherit;
 }
 
+.footer__link:hover {
+  text-decoration: underline;
+}
+
 .footer__icon {
   margin-left: 8px;
   max-width: 18px;
@@ -1695,6 +1741,15 @@ template {
   cursor: pointer;
 }
 
+.footer__rule:hover {
+  text-decoration: underline;
+}
+
+.footer__button:hover {
+  -webkit-box-shadow: 0 0 5px;
+          box-shadow: 0 0 5px;
+}
+
 .modal__overlay {
   position: fixed;
   left: 0;
@@ -1733,6 +1788,7 @@ template {
   opacity: 0;
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
+  overflow-y: auto;
 }
 
 .modal__dialog--visible {
@@ -1760,6 +1816,7 @@ template {
 }
 
 .modal__input {
+  position: relative;
   width: 100%;
   margin-top: 15px;
 }
@@ -2016,6 +2073,7 @@ template {
     margin-left: 0;
   }
   .modal__dialog {
+    overflow-y: scroll;
     max-width: 400px;
     padding-top: 15px;
     padding-bottom: 15px;
