--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -155,6 +155,7 @@
       margin-left: 0
   .modal
     &__dialog
+      overflow-y: scroll
       max-width: 400px
       padding-top: 15px
       padding-bottom: 15px
