--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -51,6 +51,9 @@ img
     margin-bottom: 20px
     text-align: center
 .invalid
+  font-size: 12px
   color: $primary-color
   border-bottom: 1px solid $primary-color
-  position: block
+  position: absolute
+  left: 0
+  
