--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -128,7 +128,8 @@
     font-size: 14px
     line-height: 16px
     cursor: pointer
-
+    &:hover
+      box-shadow: 0 0 5px
 .price
   &-to
     font-weight: 400
