create: add animation

--- a/sass/blocks/_breadcrumb.sass
+++ b/sass/blocks/_breadcrumb.sass
@@ -16,5 +16,6 @@
       text-decoration: none
       color: inherit
       cursor: pointer
+      outline: none
       &:hover
         text-decoration: underline
