--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -80,6 +80,7 @@
   &__link
     text-decoration: none
     color: inherit
+    outline: none
     &:hover
       text-decoration: underline
   &__icon
@@ -132,6 +133,7 @@
     text-decoration: none
     color: $light
     cursor: pointer
+    outline: none
     &:hover
       text-decoration: underline
   &__button
