--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -69,5 +69,6 @@
     cursor: pointer
     border-radius: 0 4px 4px 0
     overflow: hidden
+    outline: none
     &:hover
       text-decoration: underline
