--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -55,6 +55,7 @@
       background-color: transparent
       cursor: pointer
       z-index: 20
+      outline: none
       &--prev
         background-image: url(../img/arrow-prev-secondary.svg)
         left: 15px
