--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,6 @@ img {
   font-size: 12px;
   color: #EC1F46;
   border-bottom: 1px solid #EC1F46;
-  position: absolute;
-  left: 0;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -469,6 +467,7 @@ template {
   line-height: 18px;
   font-weight: 600;
   cursor: pointer;
+  outline: none;
 }
 
 .navbar-menu__link:hover {
@@ -514,6 +513,7 @@ template {
   border: none;
   background-color: #EC1F46;
   cursor: pointer;
+  outline: none;
 }
 
 .search__button:hover {
@@ -531,6 +531,7 @@ template {
   text-decoration: none;
   color: #333333;
   cursor: pointer;
+  outline: none;
 }
 
 .user:hover {
@@ -577,6 +578,7 @@ template {
   text-decoration: none;
   color: inherit;
   cursor: pointer;
+  outline: none;
 }
 
 .breadcrumb-list__link:hover {
@@ -703,18 +705,17 @@ template {
   background-position: center;
   background-size: 10px;
   background-color: transparent;
-}
-
-.hotel-slider__button:active, .hotel-slider__button:focus {
   outline: none;
 }
 
 .hotel-slider__button--next {
+  outline: none;
   right: 18px;
   background-image: url(../img/arrow-next.svg);
 }
 
 .hotel-slider__button--prev {
+  outline: none;
   left: 18px;
   background-image: url(../img/arrow-prev.svg);
 }
@@ -863,6 +864,7 @@ template {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+  outline: none;
 }
 
 .booking__num {
@@ -885,6 +887,7 @@ template {
   line-height: 19px;
   cursor: pointer;
   color: #ffffff;
+  outline: none;
 }
 
 .booking__button:hover {
@@ -1115,6 +1118,7 @@ template {
   font-size: 14px;
   line-height: 16px;
   cursor: pointer;
+  outline: none;
 }
 
 .package__button:hover {
@@ -1234,6 +1238,7 @@ template {
   cursor: pointer;
   border-radius: 0 4px 4px 0;
   overflow: hidden;
+  outline: none;
 }
 
 .subscribe__button:hover {
@@ -1314,6 +1319,7 @@ template {
   background-color: transparent;
   cursor: pointer;
   z-index: 20;
+  outline: none;
 }
 
 .reviews-slider__button--prev {
@@ -1484,6 +1490,7 @@ template {
   font-size: 12px;
   line-height: 16px;
   cursor: pointer;
+  outline: none;
 }
 
 .card__button:hover {
@@ -1640,6 +1647,7 @@ template {
 .footer__link {
   text-decoration: none;
   color: inherit;
+  outline: none;
 }
 
 .footer__link:hover {
@@ -1739,6 +1747,7 @@ template {
   text-decoration: none;
   color: #ffffff;
   cursor: pointer;
+  outline: none;
 }
 
 .footer__rule:hover {
