--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -18,6 +18,10 @@
       &-group
         flex-basis: 100%
 @media (max-width: 992px)
+  
+  // .hover
+  //   user-select: none
+  //   -webkit-touch-callout: none
   .container, .newsletter-wrapper
     max-width: 700px
   .user
