--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -54,6 +54,6 @@ img
   font-size: 12px
   color: $primary-color
   border-bottom: 1px solid $primary-color
-  position: absolute
-  left: 0
+  // position: absolute
+  // left: 0
   
