--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -26,6 +26,7 @@
       line-height: 18px
       font-weight: 600
       cursor: pointer
+      outline: none
       &:hover
         text-decoration: underline
     &__item
@@ -59,6 +60,7 @@
     border: none
     background-color: $primary-color
     cursor: pointer
+    outline: none
     &:hover
       box-shadow: 0 0 5px
 .user
@@ -67,6 +69,7 @@
   text-decoration: none
   color: $text-color
   cursor: pointer
+  outline: none
   &:hover
     text-decoration: underline
   &__avatar
