--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -128,6 +128,7 @@
     font-size: 14px
     line-height: 16px
     cursor: pointer
+    outline: none
     &:hover
       box-shadow: 0 0 5px
 .price
