--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -187,7 +187,7 @@
       box-shadow: 0 0 5px
 // Карта
 .map
-  background-image: url(../img/cards-2.jpeg)
+  background-image: url(../img/cards-2.jpg) 
   background-position: center center
   background-size: 100%
   background-repeat: no-repeat
